feat/environment-setting
webpack, babel, eslint, prettier setting done - typescript

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div>sdssdsd</div>
-    <button id="button">ddd</button>
+    <button id="button">dsaddsa</button>
   </body>
 </html>
