feat:MarkUp Fixed

--- a/html시안/index.html
+++ b/html시안/index.html
@@ -11,73 +11,70 @@
     <div class="wrap">
       <nav class="menu-bar">menu</nav>
       <div class="chatting-wrap">
-        <div class="friend-list-wrap">
+        <section class="friend-list-wrap">
           <div class="friend-list-title"></div>
-          <div class="friend-list">
-            <div class="friends"></div>
-            <div class="friends now-talking"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-            <div class="friends"></div>
-          </div>
-        </div>
-        <div class="chatting-area">
+          <ul class="friend-list">
+            <li class="friends"></li>
+            <li class="friends now-talking"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+            <li class="friends"></li>
+          </ul>
+        </section>
+        <section class="chatting-area">
           <div class="chat-top-bar"></div>
           <div class="chat-list">
-            <div class="my-chat"><div class="chat-box">안녕</div></div>
-            <div class="my-chat">
-              <div class="chat-box">안녕안녕안녕안녕안녕안녕</div>
-            </div>
-            <div class="your-chat">
-              <div class="chat-box">
-                안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕
-              </div>
-            </div>
+            <div class="my-chat"><div class="chat-box">ㅂㅂ</div></div>
             <div class="my-chat">
               <div class="chat-box">
-                안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕
-              </div>
-            </div>
-            <div class="my-chat"><div class="chat-box">안녕안녕</div></div>
-            <div class="your-chat"><div class="chat-box">안녕</div></div>
-            <div class="my-chat">
-              <div class="chat-box">
-                안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕
+                일단 나는 대충 핸드폰 출석 로그 찍히는거까지 해놨으니까
               </div>
             </div>
             <div class="your-chat">
-              <div class="chat-box">안녕안녕안녕안녕안녕</div>
-            </div>
-            <div class="my-chat">
               <div class="chat-box">
-                안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕
+                ㅇㅋ DB 구조 적당히 짜서 갈테니까 다음에 만나서 세분화하자.
               </div>
             </div>
             <div class="my-chat">
-              <div class="chat-box">
-                안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕
-              </div>
+              <div class="chat-box">데이터 베이스 구조 미리 짜고 가면 될듯</div>
+            </div>
+            <div class="my-chat"><div class="chat-box">와~~</div></div>
+            <div class="your-chat">
+              <div class="chat-box">그럼 그렇게 하자</div>
+            </div>
+            <div class="my-chat">
+              <div class="chat-box">그게 좋을듯 ㅇㅇ</div>
+            </div>
+            <div class="your-chat">
+              <div class="chat-box">회의 만 좀 짧게 할까 해서 이번주에 ?</div>
+            </div>
+            <div class="my-chat">
+              <div class="chat-box">시간 몇시부터 되는거야?</div>
+            </div>
+            <div class="my-chat">
+              <div class="chat-box">걍 디자인한거 만드는중이고</div>
             </div>
             <div class="my-chat">
               <div class="chat-box">
-                아ㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏ
+                월요일에 교수님 청강 듣는 수업이 있는데 그거 시험이 있어서
+                ㅠㅠㅠㅠ
               </div>
             </div>
           </div>
           <div class="chat-input">
             <div class="emoticon-box"></div>
-            <input />
+            <textarea id="story" name="story" rows="5" cols="33"> </textarea>
           </div>
-        </div>
+        </section>
         <div class="blank-area"></div>
       </div>
     </div>
