feat:SPA_prettiering

--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,11 @@
       <!--Link-->
       <div class="link-container">
         <div class="link-box">
-          <a class="hash" href="#about">Hash About</a>
+          <a class="hash" href="#route1">Hash About</a>
         </div>
 
         <div class="link-box">
-          <a class="hash" href="#home">Hash Home</a>
+          <a class="hash" href="#route2">Hash Home</a>
         </div>
       </div>
 
