feat:debouncer&throttler

--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,11 @@
       <!--Content-->
       <div id="hash-app"></div>
     </div>
+
+    <!-- debouncer, throttling -->
+    <div class="long-box"></div>
+    <div class="fixed-box">0</div>
+    <div class="fixed-box2">0</div>
+    <div class="fixed-box3">0</div>
   </body>
 </html>
