--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,14 @@
     </div>
 
     <!-- debouncer, throttling -->
-    <div class="long-box"></div>
+    <!-- <div class="long-box"></div>
     <div class="fixed-box">0</div>
     <div class="fixed-box2">0</div>
-    <div class="fixed-box3">0</div>
+    <div class="fixed-box3">0</div> -->
+
+    <div class="infinite-box-wrap">
+      <div class="infinite-box"></div>
+      <div class="observe"></div>
+    </div>
   </body>
 </html>
