feature/componene-add

--- a/src/index.html
+++ b/src/index.html
@@ -7,28 +7,23 @@
     <title>Document</title>
   </head>
   <body>
-    <!--BrowserHistory-->
-    <div>
-      <!--Link-->
+    <div class="main-body">
       <div class="link-container">
         <div class="link-box">
-          <span class="history" route="/route1">History About</span>
+          <span class="history" route="/">home</span>
+        </div>
+        <div class="link-box">
+          <span class="history" route="/route1">History</span>
         </div>
 
         <div class="link-box">
-          <span class="history" route="/route2">History Home</span>
+          <span class="history" route="/route2">History2</span>
         </div>
       </div>
-
-      <!--Content-->
-      <div id="history-app"></div>
+      <div class="content-box" id="history-app"></div>
     </div>
-
-    <hr />
-
-    <!--HashHistory-->
+    <!-- 
     <div>
-      <!--Link-->
       <div class="link-container">
         <div class="link-box">
           <a class="hash" href="#route1">Hash About</a>
@@ -39,19 +34,7 @@
         </div>
       </div>
 
-      <!--Content-->
       <div id="hash-app"></div>
-    </div>
-
-    <!-- debouncer, throttling -->
-    <!-- <div class="long-box"></div>
-    <div class="fixed-box">0</div>
-    <div class="fixed-box2">0</div>
-    <div class="fixed-box3">0</div> -->
-
-    <div class="infinite-box-wrap">
-      <div class="infinite-box"></div>
-      <div class="observe"></div>
-    </div>
+    </div> -->
   </body>
 </html>
